<resources>
    <string name="app_name">ITLWorkshop</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="caption_add">Add</string>

    <string name="caption_take_photo">Take photo</string>
    <string name="hint_name">Type the name</string>
    <string name="hint_brief_message">Type a brief message</string>
    <string name="caption_save">Save</string>
    <string name="hint_phone">phone number</string>
    <string name="err_brief_message">Brief message cannot be left blank</string>
    <string name="err_name">Contact name cannot be left blank</string>
    <string name="err_phone_number">Phone number cannot be left blank</string>

</resources>
